fix: enable pnpm-lock.yaml tracking and fix pre-commit hooks

--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
     "pnpm": ">=9.0.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged",
-    "commit-msg": "pnpm commitlint --edit $1"
+    "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
-    "src/**/*.ts": [
+    "*.ts": [
       "prettier --write",
       "eslint --fix"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
     ]
   },
   "files": [
