refactor: update imports to use 'type' for type-only imports and improve code consistency
- Changed imports from '@notionhq/client' to use 'import type' for better clarity in type usage across multiple files.
- Updated variable declarations from 'let' to 'const' where applicable to enforce immutability.
- Refined regex patterns in markdown helper functions for improved readability.
- Enhanced string interpolation for better formatting in rich text truncation.
- Reorganized import statements in registry.ts for consistency.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,26 +13,14 @@ repos:
   # TypeScript/JavaScript
   # ============================================================================
 
-  # Prettier: Code formatter for JavaScript/TypeScript/JSON
+  # Biome: Fast formatter and linter for JavaScript/TypeScript
   - repo: local
     hooks:
-      - id: prettier
-        name: prettier format
-        entry: bash -c 'pnpm exec prettier --write "$@"' --
+      - id: biome-check
+        name: biome check
+        entry: bash -c 'pnpm exec biome check --write "$@"' --
         language: system
-        types_or: [javascript, ts, json, markdown, yaml]
-        pass_filenames: true
-
-  # ESLint: Linter for JavaScript/TypeScript
-  - repo: local
-    hooks:
-      - id: eslint
-        name: eslint lint
-        entry: bash -c 'pnpm exec eslint --fix "$@"' --
-        language: system
-        types: [file]
-        files: \.(ts|js)$
-        exclude: ^(build|node_modules|dist)/
+        types_or: [javascript, ts, json]
         pass_filenames: true
 
   # TypeScript: Type checker
