--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "test": "vitest --passWithNoTests",
     "test:watch": "vitest watch",
     "test:coverage": "vitest --coverage",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\"",
+    "lint": "biome lint src",
+    "lint:fix": "biome lint --write src",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
     "type-check": "tsc --noEmit",
-    "check": "pnpm type-check && pnpm lint && pnpm format:check",
+    "check": "biome check . && pnpm type-check",
+    "check:fix": "biome check --write . && pnpm type-check",
     "release": "semantic-release",
     "prepublishOnly": "pnpm build",
     "docker:build": "docker build -t n24q02m/better-notion-mcp:latest .",
@@ -49,18 +50,12 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@biomejs/biome": "^2.3.8",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/node": "^24.10.0",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
     "@vitest/coverage-v8": "^4.0.8",
     "esbuild": "^0.25.12",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.4.2",
     "semantic-release": "^25.0.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
