--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     hooks:
       - id: biome-check
         name: biome check
-        entry: bash -c 'pnpm exec biome check --write "$@"' --
+        entry: pnpm exec biome check --write
         language: system
         types_or: [javascript, ts, json]
         pass_filenames: true
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: typescript-check
         name: typescript type check
-        entry: bash -c "pnpm exec tsc --noEmit"
+        entry: pnpm exec tsc --noEmit
         language: system
         types: [ts]
         pass_filenames: false
