--- a/.mise.toml
+++ b/.mise.toml
@@ -16,7 +16,7 @@ description = "Setup development environment"
 run = [
   "mise install",
   "pnpm install",
-  "uv venv",
+  "uv venv --clear",
   "uv pip install pre-commit",
   "uv run pre-commit install",
   "echo 'Setup complete!'",
