chore: standardize mise setup and pre-commit config
- Add cross-platform clean-venv.mjs script
- Upgrade pre-commit-hooks to v5.0.0
- Add mise exec prefix for cross-platform hooks

--- a/.mise.toml
+++ b/.mise.toml
@@ -16,7 +16,7 @@ description = "Setup development environment"
 run = [
   "mise install",
   "pnpm install",
-  "uv venv --clear",
+  "node scripts/clean-venv.mjs",
   "uv pip install pre-commit",
   "uv run pre-commit install",
   "echo 'Setup complete!'",
