--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -62,6 +62,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_PAT }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
