feat: promote dev to main (v2.4.0-beta.2) (#31)
* ci(cd): improve release workflow

- Switch to GH_PAT for semantic-release and git operations
- Add restore-dev job to auto-restore dev branch
- Configure git author for release step

* chore(release): 2.4.0-beta.1 [skip ci]

# [2.4.0-beta.1](https://github.com/n24q02m/better-notion-mcp/compare/v2.3.12...v2.4.0-beta.1) (2026-02-05)

### Features

* promote dev to main (v2.3.14-beta.1) ([#23](https://github.com/n24q02m/better-notion-mcp/issues/23)) ([9292290](https://github.com/n24q02m/better-notion-mcp/commit/9292290726fd47e0ec0a6180edda41aecb80de4b)), closes [#11](https://github.com/n24q02m/better-notion-mcp/issues/11)

* fix: Use GITHUB_TOKEN instead of GH_PAT for GitHub Container Registry authentication and CI/CD status checks.

* chore(release): 2.4.0-beta.2 [skip ci]

# [2.4.0-beta.2](https://github.com/n24q02m/better-notion-mcp/compare/v2.4.0-beta.1...v2.4.0-beta.2) (2026-02-05)

### Bug Fixes

* Use GITHUB_TOKEN instead of GH_PAT for GitHub Container Registry authentication and CI/CD status checks. ([a0fcbca](https://github.com/n24q02m/better-notion-mcp/commit/a0fcbcac922c3b8a850c3f735d0943dca8b8cc6b))

* ci(cd): trigger release on PR merge

- Add pull_request: closed event for main branch
- Update release job to run on merged PRs from dev
- Update restore-dev job to run after PR merge

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,6 +3,9 @@ name: CD
 on:
   push:
     branches: [dev, main]
+  pull_request:
+    types: [closed]
+    branches: [main]
   workflow_dispatch:
     inputs:
       action:
@@ -91,9 +94,37 @@ jobs:
 
           ### Latest beta version: $LATEST_TAG"
 
+  restore-dev:
+    name: Restore Dev Branch
+    needs: [release]
+    if: |
+      (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
+      (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout main
+        uses: actions/checkout@v6
+        with:
+          ref: main
+          fetch-depth: 0
+          token: ${{ secrets.GH_PAT }}
+
+      - name: Restore dev branch from main
+        run: |
+          if git ls-remote --exit-code --heads origin dev; then
+            echo "Dev branch already exists, skipping"
+            exit 0
+          fi
+
+          git checkout -b dev
+          git push origin dev
+          echo "✅ Dev branch restored from main"
+
   release:
     name: Semantic Release
-    if: github.event_name == 'push'
+    if: |
+      (github.event_name == 'push') ||
+      (github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.event.pull_request.head.ref == 'dev')
     runs-on: ubuntu-latest
     outputs:
       released: ${{ steps.check.outputs.released }}
