fix(cd): checkout main branch for PR merge release
Semantic-release was creating beta releases because checkout was using PR head (dev) instead of base branch (main).

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -136,6 +136,7 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GH_PAT }}
+          ref: ${{ github.event_name == 'pull_request' && 'main' || github.ref }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
