--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -164,13 +164,7 @@ jobs:
           GIT_COMMITTER_EMAIL: github-actions[bot]@users.noreply.github.com
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          npx semantic-release --dry-run > release-output.txt 2>&1 || true
-          if grep -qE "Published release|Release notes for" release-output.txt; then
-            pnpm release
-          else
-            echo "No new commits to release"
-          fi
+        run: pnpm release || true
 
       - name: Check release status
         id: check
@@ -188,6 +182,7 @@ jobs:
             echo "released=false" >> $GITHUB_OUTPUT
             echo "No new release"
           fi
+
 
 
   build-docker:
