fix: resolve biome lint errors and revert unsafe dry-run check

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -164,7 +164,7 @@ jobs:
           GIT_COMMITTER_EMAIL: github-actions[bot]@users.noreply.github.com
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: pnpm release || true
+        run: pnpm release
 
       - name: Check release status
         id: check
