--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "@n24q02m/better-notion-mcp",
-  "keywords": ["notion", "api", "mcp", "server", "ai-agent", "composite-tools"],
-  "version": "2.4.0-beta.1",
+  "keywords": [
+    "notion",
+    "api",
+    "mcp",
+    "server",
+    "ai-agent",
+    "composite-tools"
+  ],
+  "version": "3.0.0",
   "license": "MIT",
   "type": "module",
   "packageManager": "pnpm@9.15.4",
@@ -33,7 +40,12 @@
     "node": ">=24.0.0",
     "pnpm": ">=9.0.0"
   },
-  "files": ["build/", "bin/", "README.md", "LICENSE"],
+  "files": [
+    "build/",
+    "bin/",
+    "README.md",
+    "LICENSE"
+  ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.21.1",
     "@notionhq/client": "^5.3.0",
