ci: fix release-please prerelease config (use beta config file)

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -97,11 +97,9 @@ jobs:
         id: release
         with:
           token: ${{ secrets.GH_PAT }}
-          config-file: release-please-config.json
+          config-file: release-please-config-beta.json
           manifest-file: .release-please-manifest.json
           target-branch: dev
-          prerelease: true
-          prerelease-type: beta
 
   release-stable:
     name: Release (Stable)
