--- a/release-please-config-beta.json
+++ b/release-please-config-beta.json
@@ -61,7 +61,9 @@
     }
   ],
   "packages": {
-    ".": {}
+    ".": {
+      "include-component-in-tag": false
+    }
   },
   "prerelease": true,
   "prerelease-type": "beta",
